# duckql

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example.py  pyproject.toml
docs/: api_reference.md
duckql/: __init__.py  cli.py  core.py  exceptions.py  notebook.py
duckql/execution/: __init__.py  executor.py  translator.py
duckql/metrics/: __init__.py  collector.py  middleware.py  reporters.py
duckql/schema/: __init__.py  aggregates.py  introspection.py  types.py
duckql/validation/: __init__.py  depth_extension.py
examples/: advanced_features.py  depth_limiting.py  getting_started.py  metrics_monitoring.py  notebook_usage.ipynb
tests/: __init__.py  example_schemas.py  pidgin_schema.py  test_aggregation.py  test_database.py  test_depth_limiting.py  test_exceptions.py  test_executor.py  test_integration.py  test_introspection.py  test_metrics.py  test_translator.py  test_types.py
